# AE2122WS

./: .gitignore  README.md
1_answers/: V01.docx  ~$V01.docx
1_answers/v01/: pi_monte_carlo_parallel.cpp  pi_numerical_integration_parallel.cpp
1_answers/v02/: ans2_unbalanced_workload.cpp  ans3_schedule_clause.cpp  cmurace_condition.cpp  continue_hack_min_solution_atomic.cpp  pi_openmp_v1.cpp
1_answers/v03/: 1pi_numerical_integration.cpp  3_mandelbrot_tuned.cpp
1_answers/v04/: 1_merge_sort.cpp  2_merge_single_threaded.cpp
2_project/: .nfs00000003907fb5a20015dadf  CMakeLists.txt  Untitled1.ipynb  proj  proj.cpp
2_project/testing_with_catch/: CMakeLists.txt  catch_tests_proj.cpp
2_project/testing_with_catch/my_lib/: CMakeLists.txt
2_project/using_my_lib/: CMakeLists.txt  main.cpp
2_project/using_my_lib/my_lib/: CMakeLists.txt
2_project/using_my_lib/my_lib/include/: enhance.h
2_project/using_my_lib/my_lib/src/: enhance.cpp
2_project/with_h/using_my_lib/: main.cpp
